--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,7 @@
     body {
       background-color: #222;
       color: white;
-      font-family: courier,arial,sans-serif;
+      font-family: Helvetica, arial, sans-serif;
     }
 
     html {
@@ -36,6 +36,7 @@
     }
 
     h1 {
+      font-family: courier,arial,sans-serif;
       font-weight: normal;
       font-size: 18px;
       text-align: center;
@@ -54,6 +55,16 @@
       padding: 20px;
       background: white;
       margin: 0 auto;
+    }
+
+    /* not working */
+    .afterloginblock input {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
 
     .login-block h1,.afterloginblock h1 {
@@ -78,9 +89,10 @@
 
     .login-block input:active, .login-block input:focus {
       border: 1px solid #858585;;
+      background-color:#6d6d6d;
     }
 
-    .login-block button,.afterloginblock button {
+    .login-block button, .afterloginblock button {
       width: 100%;
       height: 40px;
       background:#858585;;
@@ -94,8 +106,12 @@
     	margin-bottom: 10px;
     }
 
-    .login-block button:hover {
-      background: #858585;;
+    .login-block button:hover, .login-block button:focus {
+      background-color:#555;
+    }
+
+    .afterloginblock button:hover, .afterloginblock button:focus {
+      background-color:#555;
     }
 
     .loadinggif {
