updated button styling on popup.html

--- a/popup.html
+++ b/popup.html
@@ -93,7 +93,7 @@
 
     .login-block input:active, .login-block input:focus {
       border: 1px solid #858585;;
-      background-color:#6d6d6d;
+      /*background-color:#6d6d6d;*/
     }
 
     .login-block button, .afterloginblock button {
