updated id names

--- a/popup.html
+++ b/popup.html
@@ -20,9 +20,9 @@
     <label>Title</label>
     <input type="text" value="" tabIndex="-1" placeholder="Title" id="urltitle" />
 	  <p id="urlerror"></p>
-    <button id="submiturl" tabIndex="-1">Save Current Tab</button>
+    <button id="submitcurrent" tabIndex="-1">Save Current Tab</button>
     </br>
-    <button id="submitallurl" tabIndex="-1">Save All Tabs</button>
+    <button id="submitall" tabIndex="-1">Save All Tabs</button>
     <p id="errorurl"></p>
     <div id="serverresponse"></div>
   </div>
@@ -47,14 +47,14 @@
     }
 
     .login-block {
-      width: 200px;
+      width: 250px;
       padding: 20px;
       background: #fff;
       margin: 0 auto;
     }
 
     .afterloginblock {
-      width: 300px;
+      width: 250px;
       padding: 20px;
       background: white;
       margin: 0 auto;
