--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Collated.net Chrome Extension</title>
-    <script type="text/javascript" src="background.js"></script>
+    <!-- <script type="text/javascript" src="background.js"></script> -->
     <script type="text/javascript" src="popup.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   </head>
@@ -9,7 +9,7 @@
   <h1>collated</h1>
   <div id="loginblock" class="login-block">
     <input type="text" placeholder="Username" id="username" autocomplete="off" />
-    <input type="text" value="" placeholder="Email" id="email" autocomplete="off" />
+    <!-- <input type="text" value="" placeholder="Email" id="email" autocomplete="off" /> -->
     <button id="submitbutton">Submit</button>
   	<p id="error"></p>
   </div>
