--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 
   <h1>collated</h1>
   <div id="loginblock" class="login-block">
-    <input type="text" placeholder="Username" id="username" autocomplete="off" />
+    <input type="text" placeholder="Enter username" id="username" autocomplete="off" />
     <!-- <input type="text" value="" placeholder="Email" id="email" autocomplete="off" /> -->
     <button id="submitbutton">Submit</button>
   	<p id="error"></p>
