showed token in popup for debugging reasons

--- a/popup.html
+++ b/popup.html
@@ -20,12 +20,15 @@
     <input type="text" value="" tabIndex="-1" placeholder="Title" id="urltitle" />
 	  <p id="urlerror"></p>
     <button id="submitcurrent" tabIndex="-1">Save Current Tab</button>
-    <!-- <br/>
-    <button id="submitall" tabIndex="-1">Save All Tabs</button> -->
+    <br/>
+    <button id="submitall" tabIndex="-1">Save All Tabs</button>
     <br/>
 
+    <p id="token"></p>
+    <br />
     <p id="errorurl"></p>
     <div id="serverresponse"></div>
+    <br />
   </div>
 
   <style>
