--- a/popup.html
+++ b/popup.html
@@ -7,9 +7,7 @@
 
   <h1><a id="collatedlink">collated</a></h1>
   <div id="loginblock" class="login-block">
-    <input type="text" placeholder="Enter username" id="username" autocomplete="off" />
-    <!-- <input type="text" value="" placeholder="Email" id="email" autocomplete="off" /> -->
-    <button id="submitbutton">Submit</button>
+    <button id="authenticatebutton">Click to Authenticate</button>
   	<p id="error"></p>
   </div>
 
