--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
   <div id="loginblock" class="login-block">
     <button id="authenticatebutton">Click to Authenticate</button>
   	<p id="error"></p>
+    <p id="token"></p>
   </div>
 
   <div id="afterloginblock" style="display:none" class="afterloginblock">
