--- a/popup.html
+++ b/popup.html
@@ -22,12 +22,13 @@
     <button id="submitall" tabIndex="-1">Save All Tabs</button>
     <br/>
 
-    <p id="token"></p>
     <br />
     <p id="errorurl"></p>
     <div id="serverresponse"></div>
     <br />
   </div>
+
+  <p id="token" style="color: white;"></p>
 
   <style>
     body {
