--- a/popup.html
+++ b/popup.html
@@ -7,28 +7,25 @@
 
   <h1><a id="collatedlink">collated</a></h1>
   <div id="loginblock" class="login-block">
-    <button id="authenticatebutton">Click to Authenticate</button>
-  	<p id="error"></p>
+    <button id="authenticatebutton">Click to authenticate</button>
+  	<p id="authresponse"></p>
   </div>
 
   <div id="afterloginblock" style="display:none" class="afterloginblock">
-    <label>URL</label>
+    <label>Link</label>
     <input type="text" value="" tabIndex="-1" placeholder="Enter url here" id="url" />
+
     <label>Title</label>
     <input type="text" value="" tabIndex="-1" placeholder="Title" id="urltitle" />
-	  <p id="urlerror"></p>
-    <button id="submitcurrent" tabIndex="-1">Save Current Tab</button>
-    <br/>
-    <button id="submitall" tabIndex="-1">Save All Tabs</button>
+
+    <button id="submitcurrent" tabIndex="-1">Save current tab</button>
     <br/>
 
-    <br />
-    <p id="errorurl"></p>
-    <div id="serverresponse"></div>
-    <br />
+    <button id="submitall" tabIndex="-1">Save all tabs</button>
+    <br/>
+
+    <div id="postresponse"></div>
   </div>
-
-  <p id="token" style="color: white;"></p>
 
   <style>
     body {
@@ -51,29 +48,22 @@
 
     .login-block {
       width: 250px;
+      height: 100px;
       padding: 20px;
       background: #fff;
       margin: 0 auto;
     }
 
     .afterloginblock {
+      position: relative;
       width: 250px;
+      height: 305px;
       padding: 20px;
       background: white;
       margin: 0 auto;
     }
 
-    /* not working */
-    .afterloginblock input {
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    .login-block h1,.afterloginblock h1 {
+    .login-block h1, .afterloginblock h1 {
       color: #000;
       font-size: 18px;
       text-transform: uppercase;
@@ -81,7 +71,7 @@
       margin-bottom: 20px;
     }
 
-    .login-block input,.afterloginblock input {
+    .login-block input, .afterloginblock input {
       width: 100%;
       height: 42px;
       box-sizing: border-box;
@@ -95,8 +85,7 @@
     }
 
     .login-block input:active, .login-block input:focus {
-      border: 1px solid #858585;;
-      /*background-color:#6d6d6d;*/
+      border: 1px solid #858585;
     }
 
     .login-block button, .afterloginblock button {
@@ -110,7 +99,7 @@
       font-family: Montserrat;
       outline: none;
       cursor: pointer;
-    	margin-bottom: 10px;
+    	margin-top: 20px;
     }
 
     .login-block button:hover, .login-block button:focus {
@@ -125,24 +114,18 @@
       background:url('http://www.hsi.com.hk/HSI-Net/pages/images/en/share/ajax-loader.gif') no-repeat right center;
     }
 
-    .serverresponsegreen {
-      height : 20px;
-      margin:0;
-      font-weight:bold;
-      color: green;
+    #postresponse, #authresponse {
+      font-size: 14px;
     }
 
-    .serverresponsered {
-      height : 20px;
-      margin:0;
+    .error {
       font-weight:bold;
       color: red;
     }
 
-    #serverresponse {
-      height : 20px;
-      margin:0;
+    .success {
       font-weight:bold;
+      color: green;
     }
 
     a:link, a:active, a:hover, a:focus, a:visited {
