changed to camelcase

--- a/popup.html
+++ b/popup.html
@@ -5,26 +5,26 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   </head>
 
-  <h1><a id="collatedlink">collated</a></h1>
-  <div id="loginblock" class="login-block">
-    <button id="authenticatebutton">Click to authenticate</button>
-  	<p id="authresponse"></p>
+  <h1><a id="collatedLink">collated</a></h1>
+  <div id="loginBlock" class="login-block">
+    <button id="authenticateButton">Click to authenticate</button>
+  	<p id="authResponse"></p>
   </div>
 
-  <div id="afterloginblock" style="display:none" class="afterloginblock">
+  <div id="afterLoginBlock" style="display:none" class="afterLoginBlock">
     <label>Link</label>
     <input type="text" value="" tabIndex="-1" placeholder="Enter url here" id="url" />
 
     <label>Title</label>
-    <input type="text" value="" tabIndex="-1" placeholder="Title" id="urltitle" />
+    <input type="text" value="" tabIndex="-1" placeholder="Title" id="urlTitle" />
 
-    <button id="submitcurrent" tabIndex="-1">Save current tab</button>
+    <button id="submitCurrent" tabIndex="-1">Save current tab</button>
     <br/>
 
-    <button id="submitall" tabIndex="-1">Save all tabs</button>
+    <button id="submitAll" tabIndex="-1">Save all tabs</button>
     <br/>
 
-    <div id="postresponse"></div>
+    <div id="postResponse"></div>
   </div>
 
   <style>
@@ -54,7 +54,7 @@
       margin: 0 auto;
     }
 
-    .afterloginblock {
+    .afterLoginBlock {
       position: relative;
       width: 250px;
       height: 305px;
@@ -63,7 +63,7 @@
       margin: 0 auto;
     }
 
-    .login-block h1, .afterloginblock h1 {
+    .login-block h1, .afterLoginBlock h1 {
       color: #000;
       font-size: 18px;
       text-transform: uppercase;
@@ -71,7 +71,7 @@
       margin-bottom: 20px;
     }
 
-    .login-block input, .afterloginblock input {
+    .login-block input, .afterLoginBlock input {
       width: 100%;
       height: 42px;
       box-sizing: border-box;
@@ -88,7 +88,7 @@
       border: 1px solid #858585;
     }
 
-    .login-block button, .afterloginblock button {
+    .login-block button, .afterLoginBlock button {
       width: 100%;
       height: 40px;
       background:#858585;;
@@ -106,7 +106,7 @@
       background-color:#555;
     }
 
-    .afterloginblock button:hover, .afterloginblock button:focus {
+    .afterLoginBlock button:hover, .afterLoginBlock button:focus {
       background-color:#555;
     }
 
@@ -114,7 +114,7 @@
       background:url('http://www.hsi.com.hk/HSI-Net/pages/images/en/share/ajax-loader.gif') no-repeat right center;
     }
 
-    #postresponse, #authresponse {
+    #postResponse, #authResponse {
       font-size: 14px;
     }
 
