--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 
   <h1><a id="collatedLink">collated</a></h1>
   <div id="loginBlock" class="login-block">
-    <button id="authenticateButton">Click to authenticate</button>
+    <button id="authenticateButton" tabIndex="-1">Click to authenticate</button>
   	<p id="authResponse"></p>
   </div>
 
@@ -128,10 +128,11 @@
       color: green;
     }
 
-    a:link, a:active, a:hover, a:focus, a:visited {
+    a:hover, a:focus {
+      cursor: pointer;
       color: white;
       outline: none;
-      text-decoration: none;
+      text-decoration: underline;
     }
 
   </style>
